--- a/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
@@ -11,18 +11,16 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 @{
-    var searchBy = Model.SearchBy;
-    var searchInput = Model.SearchInput;
     var sortBy = Model.SortBy;
     var sortDir = Model.SortDirection;
     var id = Model.PageNumber;
+    var searchDict = Model.SearchDictionary;
 
     List<String> categories = new List<String>() { "TimeStamp", "WebRequestID", "UserID", "RawURL", "Parameters", "Important" };
 
     bool noResults = (Model.TotalItems) == 0;
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
-    //searchCategories.Add(new SelectListItem { Text = "Select category", Selected=true, Disabled = true });
     searchCategories.Add(new SelectListItem { Text = "Date (YYYY-MM-DD)", Value = "TimeStamp" });
     searchCategories.Add(new SelectListItem { Text = "Raw URL", Value = "RawURL" });
     searchCategories.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
@@ -32,27 +30,30 @@
 <br />
 
 <div class="container">
-    @using (Html.BeginRouteForm("Search", new { controller = "LogWebRequest", action = "Index" }))
-    {
+    <form name="searchForm">
         @Html.HiddenFor(m => m.SortBy)
         @Html.HiddenFor(m => m.SortDirection)
 
-        <div class="block" style="width: 25% !important; display: inline-block; ">
+        <div class="block" style="width: 25% !important; display:inline-block;">
             @Html.Label("Search by: ", new { @class = "mylabel" })
             @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 25% !important; display: inline-block; ">
-            @Html.Label("*Search for: ", new { @class = "mylabel" })
+        <div class="block" style="width: 25% !important; display: inline-block;">
+            @Html.Label("Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-        <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 50px; display: inline-block;" />
+
+        <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
         @Html.ActionLink(linkText: "Undo search",
-            actionName: "Index",
-            controllerName: "LogWebRequest",
-            routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
-            htmlAttributes: new { @class = "btn btn-default" })
-    }
+         actionName: "Index",
+         controllerName: "LogWebRequest",
+         routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
+         htmlAttributes: new { @class = "btn btn-default" })
+
+        @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogWebRequest")
+    </form>
 </div>
+
 <br />
 
 <!-- Paging stuff -->
@@ -63,44 +64,28 @@
         </div>
         <div class="col-md-4">
             <div class="btn-group">
-                @Html.ActionLink(linkText: " << First",
-                                actionName: "Index",
-                                controllerName: "LogWebRequest",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = 1 },
-                                htmlAttributes: new { @class = "btn btn-default" })
-                @Html.ActionLink(linkText: "< Previous",
-                                actionName: "Index",
-                                controllerName: "LogWebRequest",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
-                                htmlAttributes: new { @class = "btn btn-default" })
-                @Html.ActionLink(linkText: "Next >",
-                                actionName: "Index",
-                                controllerName: "LogWebRequest",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
-                                htmlAttributes: new { @class = "btn btn-default" })
-                @Html.ActionLink(linkText: "Last >>",
-                                actionName: "Index",
-                                controllerName: "LogWebRequest",
-                                routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = searchBy, searchInput = searchInput, id = Model.TotalPages },
-                                htmlAttributes: new { @class = "btn btn-default" })
+                <input type="button" class="btn btn-default" onclick="updateButton(1, '@sortBy', '@sortDir')" value="<< First">
+
+                <input type="button" class="btn btn-default" onclick="updateButton(((@id - 1) != 0) ? (@id - 1) : @id, '@sortBy', '@sortDir')" value="< Previous">
+
+                <input type="button" class="btn btn-default" onClick="updateButton(((@id + 1) <= @Model.TotalPages) ? (@id + 1) : @id, '@sortBy', '@sortDir')" value="Next >">
+
+                <input type="button" class="btn btn-default" onclick="updateButton(@Model.TotalPages, '@sortBy', '@sortDir')" value="Last >>">
             </div>
         </div>
         <div class="col-md-4">
-            @using (Html.BeginRouteForm("Search", new { controller = "LogWebRequest", action = "Index" }))
-            {
+            <form name="pageJump">
                 @Html.HiddenFor(m => m.SortBy)
                 @Html.HiddenFor(m => m.SortDirection)
-                @Html.HiddenFor(m => m.SearchBy)
-                @Html.HiddenFor(m => m.SearchInput)
 
                 <div class="block">
                     @Html.Label("Page: ", new { @class = "mylabel" })
                 </div>
                 <div class="block">
-                    @Html.TextBox("id", null, new { @class = "pageinputbox" })
+                    @Html.TextBox("id")
                 </div>
-                <input type="submit" name="btnSubmit" value="Jump to page" class="btn btn-default" style="display: inline-block;" />
-            }
+                <input type="button" id="btnSubmit" value="Jump to page" class="btn btn-default" />
+            </form>
         </div>
     </div>
 </div>
@@ -114,12 +99,12 @@
                 {
                     var sortB = "";
                     var sortD = "";
-                    var className = "";
+                    var className = "sortLink";
 
                     if (sortBy == category)
                     {
                         sortB = sortBy;
-                        className = "sortLink";<!-- If sortBy == the category name, make the link underlined -->
+                        className = "selectedSortLink";<!-- If sortBy == the category name, make the link underlined -->
 
                         if (sortDir == "ASC")
                         { sortD = "DESC"; }
@@ -132,7 +117,7 @@
                         sortD = "ASC";
                     }
                     <td>
-                        @Html.ActionLink(category, "Index", new { sortBy = sortB, sortDir = sortD, searchBy = searchBy, searchInput = searchInput, id = 1 }, new { @class = className })
+                        <input type="button" id="sortButton" value="@category" onclick="updateButton(1, '@sortB', '@sortD')" class="@className" />
                     </td>
                 }
             </tr>
@@ -140,25 +125,25 @@
         <tbody>
             @foreach (LogWebRequestDataModel currentRow in Model.Items)
             {
-            <tr>
-                <td>@currentRow.TimeStamp</td>
-                <td>@currentRow.WebRequestID</td>
-                <td>@currentRow.UserID</td>
-                <td>@currentRow.RawURL</td>
-                <td>@currentRow.Parameters</td>
-                <td>
-                    @if (currentRow.Important == null) //button to mark as important
-                    {
-                        <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.TimeStamp.ToString()',
+                <tr>
+                    <td>@currentRow.TimeStamp</td>
+                    <td>@currentRow.WebRequestID</td>
+                    <td>@currentRow.UserID</td>
+                    <td>@currentRow.RawURL</td>
+                    <td>@currentRow.Parameters</td>
+                    <td>
+                        @if (currentRow.Important == null) 
+                        {
+                            <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.TimeStamp.ToString()',
                         '@currentRow.WebRequestID.ToString()', '@currentRow.UserID.ToString()', '@currentRow.RawURL.ToString()')">
-                    }
-                    else //button to unmark as important
-                    {
-                        <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.TimeStamp.ToString()',
+                        }
+                        else 
+                        {
+                            <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.TimeStamp.ToString()',
                         '@currentRow.WebRequestID.ToString()', '@currentRow.UserID.ToString()', '@currentRow.RawURL.ToString()')">
-                    }
-                </td>
-            </tr>
+                        }
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
@@ -171,7 +156,7 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance()">Update</button>
+        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
     <button onclick="closeModal()">Cancel</button>
 </div>
@@ -186,6 +171,13 @@ else
     var currentWebRequestID = null;
     var currentUserID = null;
     var currentRawURL = null;
+
+    var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict));
+    var currentid = null;
+    var currentsortBy = null;
+    var currentsortDir = null;
+    var currentsearchBy = null;
+    var currentsearchInput = null;
 
     function openModal(TimeStamp, WebRequestID, UserID, RawURL) {
         event.preventDefault;
@@ -222,7 +214,10 @@ else
         });
     });
 
-    function UpdateImportance(callback) {
+    function UpdateImportance(page, sortB, sortD) {
+        currentid = page;
+        currentsortBy = sortB;
+        currentsortDir = sortD;
         usernameValue = $("[name=usernameEntry]").val();
         debugger;
 
@@ -241,7 +236,6 @@ else
                 username: usernameValue,
                 logToUpdate: model,
             },
-            async: false,
 
             success: function (result) {
                 document.getElementById("usernameForm").reset();
@@ -252,10 +246,11 @@ else
                 currentRawURL = null;
 
                 if (result.IsCreated) {
-                    window.location.reload(true);
+                    window.location.reload();
                 }
                 else {
                     alert(result.ErrorMessage);
+                    window.location.reload();
                 }
             },
 
@@ -280,7 +275,6 @@ else
             data: {
                 logToUpdate: model,
             },
-            async: false,
 
             success: function (result) {
                 currentTimeStamp = null;
@@ -301,6 +295,86 @@ else
             }
         });
     }
+
+     $("#btnSubmit").click(function () {
+        debugger;
+        var formData = $('form[name="pageJump"]').serializeArray();
+        var sortBy = formData[0].value;
+        var sortDirection = formData[1].value;
+        var page = formData[2].value;
+
+        updateButton(page, sortBy, sortDirection, "", "");
+    });
+
+    $("#searchSubmit").click(function () {
+        debugger;
+        var formData = $('form[name="searchForm"]').serializeArray();
+        var sortBy = formData[0].value;
+        var sortDirection = formData[1].value;
+        var searchBy = formData[2].value;
+        var searchInput = formData[3].value;
+
+        updateButton(1, sortBy, sortDirection, searchBy, searchInput);
+    });
+
+    function updateButton(page, sortB, sortD, searchB, searchI) {
+        currentid = page;
+        currentsortBy = sortB;
+        currentsortDir = sortD;
+        currentsearchBy = searchB;
+        currentsearchInput = searchI;
+        debugger;
+
+        const form = document.createElement('form');
+        form.method = 'post';
+        form.action = '/LogWebRequest/Index';
+
+        var dictionary = {};
+        var index = 0;
+        var newSearch = (currentsearchInput != "");
+
+        for (var key in currentsearchDictionary) {
+            if (currentsearchDictionary.hasOwnProperty(key)) {
+                dictionary["searchDictionary[" + index + "].Key"] = key;
+                dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
+
+                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
+                    dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
+                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
+                }
+            }
+            index = index + 1;
+        }
+
+        for (var key in dictionary) {
+            const hiddenField = document.createElement('input');
+            hiddenField.hidden = true;
+            hiddenField.name = key;
+            hiddenField.value = dictionary[key];
+            form.appendChild(hiddenField);
+        }
+
+        const id = document.createElement('input');
+        id.hidden = true;
+        id.name = 'id';
+        id.value = currentid;
+        form.appendChild(id);
+
+        const sortBy = document.createElement('input');
+        sortBy.hidden = true;
+        sortBy.name = 'sortBy';
+        sortBy.value = currentsortBy;
+        form.appendChild(sortBy);
+
+        const sortDir = document.createElement('input');
+        sortDir.hidden = true;
+        sortDir.name = 'sortDir';
+        sortDir.value = currentsortDir;
+        form.appendChild(sortDir);
+
+        document.body.appendChild(form);
+        form.submit();
+    };
     </script>
 }
 
