--- a/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
@@ -4,7 +4,7 @@
 
 @model PagedDataModelCollection<LogMySqlDataModel>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "SearchIndex";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
