--- a/InternshipSkeleton/Views/LogWebResponse/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/SearchIndex.cshtml
@@ -3,7 +3,7 @@
 
 @model PagedDataModelCollection<CombinedLogWebResponseDataModel>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "SearchIndex";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -19,42 +19,8 @@
     List<String> categories = new List<String>() { "EmailAddress", "TimeStamp", "WebRequestID", "Status", "RedirectLocation", "Important" };
 
     bool noResults = (Model.TotalItems) == 0;
-
-    List<SelectListItem> searchCategories = new List<SelectListItem>();
-    searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
-    searchCategories.Add(new SelectListItem { Text = "Time Stamp (YYYY-MM-DD)", Value = "TimeStamp" });
-    searchCategories.Add(new SelectListItem { Text = "Web Request ID", Value = "WebRequestID" });
-    searchCategories.Add(new SelectListItem { Text = "Status", Value = "Status" });
-    searchCategories.Add(new SelectListItem { Text = "Redirect Location", Value = "RedirectLocation" });
-    searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
-<h3 class="tableTitle">LogWebResponse Table</h3>
-<br />
-
-<div class="container">
-    <form name="searchForm">
-        @Html.HiddenFor(m => m.SortBy)
-        @Html.HiddenFor(m => m.SortDirection)
-
-        <div class="block" style="width: 25% !important; display:inline-block;">
-            @Html.Label("Search by: ", new { @class = "mylabel" })
-            @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
-        </div>
-        <div class="block" style="width: 25% !important; display: inline-block;">
-            @Html.Label("Search for: ", new { @class = "mylabel" })
-            @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
-        </div>
-
-        <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
-        @Html.ActionLink(linkText: "Undo search",
-         actionName: "Index",
-         controllerName: "LogWebResponse",
-         routeValues: new { sortBy = sortBy, sortDir = sortDir, searchBy = "", searchInput = "", id = 1 },
-         htmlAttributes: new { @class = "btn btn-default" })
-
-        @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogWebResponse")
-    </form>
-</div>
+<h3 class="tableTitle">Advanced search results (LogWebResponse)</h3>
 <br />
 
 <!-- Paging stuff -->
@@ -74,19 +40,11 @@
                 <input type="button" class="btn btn-default" onclick="updateButton(@Model.TotalPages, '@sortBy', '@sortDir')" value="Last >>">
             </div>
         </div>
-        <div class="col-md-4">
-            <form name="pageJump">
-                @Html.HiddenFor(m => m.SortBy)
-                @Html.HiddenFor(m => m.SortDirection)
-
-                <div class="block">
-                    @Html.Label("Page: ", new { @class = "mylabel" })
-                </div>
-                <div class="block">
-                    @Html.TextBox("id")
-                </div>
-                <input type="button" id="btnSubmit" value="Jump to page" class="btn btn-default" />
-            </form>
+        <div class="col-md-2">
+            @Html.ActionLink("Back to table", "Index", null, new { @class = "btn btn-default" })
+        </div>
+        <div class="col-md-2">
+            @Html.ActionLink("New Search", "AdvancedSearch")
         </div>
     </div>
 </div>
@@ -164,9 +122,9 @@ else
     <button onclick="closeModal()">Cancel</button>
 </div>
 
-@section scripts
-{
-    <script language="javascript" type="text/javascript">
+
+@section scripts{
+    <script>
     var exampleModal;
     var exampleModalVisible = false;
 
@@ -180,10 +138,8 @@ else
     var currentid = null;
     var currentsortBy = null;
     var currentsortDir = null;
-    var currentsearchBy = null;
-    var currentsearchInput = null;
 
-    function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, Status, /*RedirectLocation */) {
+    function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, Status) {
         event.preventDefault;
 
         currentUserID = UserID;
@@ -191,7 +147,6 @@ else
         currentTimeStamp = TimeStamp;
         currentWebRequestID = WebRequestID;
         currentStatus = Status;
-        //currentRedirectLocation = RedirectLocation;
 
         exampleModal.open();
     }
@@ -204,7 +159,6 @@ else
         currentTimeStamp = null;
         currentWebRequestID = null;
         currentStatus = null;
-        //currentRedirectLocation = null;
 
         exampleModal.close();
     }
@@ -227,7 +181,6 @@ else
         currentsortBy = sortB;
         currentsortDir = sortD;
         usernameValue = $("[name=usernameEntry]").val();
-        debugger;
 
         var model = {
             UserID: currentUserID,
@@ -308,56 +261,26 @@ else
         });
     }
 
-    $("#btnSubmit").click(function () {
-        debugger;
-        var formData = $('form[name="pageJump"]').serializeArray();
-        var sortBy = formData[0].value;
-        var sortDirection = formData[1].value;
-        var page = formData[2].value;
-
-        updateButton(page, sortBy, sortDirection, "", "");
-    });
-
-    $("#searchSubmit").click(function () {
-        debugger;
-        var formData = $('form[name="searchForm"]').serializeArray();
-        var sortBy = formData[0].value;
-        var sortDirection = formData[1].value;
-        var searchBy = formData[2].value;
-        var searchInput = formData[3].value;
-
-        updateButton(1, sortBy, sortDirection, searchBy, searchInput);
-    });
-
-    function updateButton(page, sortB, sortD, searchB, searchI) {
+     function updateButton(page, sortB, sortD) {
         currentid = page;
         currentsortBy = sortB;
         currentsortDir = sortD;
-        currentsearchBy = searchB;
-        currentsearchInput = searchI;
         debugger;
 
         const form = document.createElement('form');
         form.method = 'post';
-        form.action = '/LogWebResponse/Index';
+        form.action = '/LogWebResponse/SearchIndex';
 
         var dictionary = {};
         var index = 0;
-        var newSearch = (currentsearchInput != "");
 
         for (var key in currentsearchDictionary) {
             if (currentsearchDictionary.hasOwnProperty(key)) {
                 dictionary["searchDictionary[" + index + "].Key"] = key;
                 dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
-
-                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
-                    dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
-                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
-                }
             }
             index = index + 1;
         }
-
         for (var key in dictionary) {
             const hiddenField = document.createElement('input');
             hiddenField.hidden = true;
