--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -139,16 +139,14 @@
                         @if (currentRow.Important == null) //button to mark as important
                         {
                             <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
-                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
-                            '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
-                            '@currentRow.MethodName.ToString()', '@currentRow.Object.ToString()')">
+                            '@currentRow.TimeStamp.ToString()', '@currentRow.WebRequestID.ToString()',
+                            '@currentRow.Message.ToString()', '@currentRow.MethodName.ToString()')">
                         }
                         else //button to unmark as important
                         {
                             <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
-                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
-                            '@currentRow.WebRequestID.ToString()', '@currentRow.Message.ToString()',
-                            '@currentRow.MethodName.ToString()', '@currentRow.Object.ToString()')">
+                            '@currentRow.TimeStamp.ToString()', '@currentRow.WebRequestID.ToString()',
+                            '@currentRow.Message.ToString()', '@currentRow.MethodName.ToString()')">
                         }
                     </td>
                 </tr>
@@ -176,12 +174,12 @@ else
     var exampleModalVisible = false;
 
     var currentUserID = null;
-    var currentEmailAddress = null;
+    //var currentEmailAddress = null;
     var currentTimeStamp = null;
     var currentWebRequestID = null;
     var currentMessage = null;
     var currentMethodName = null;
-    var currentObject = null;
+    //var currentObject = null;
 
     var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict));
     var currentid = null;
@@ -190,16 +188,16 @@ else
     var currentsearchBy = null;
     var currentsearchInput = null;
 
-    function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, Message, MethodName, Object) {
+    function openModal(UserID, TimeStamp, WebRequestID, Message, MethodName) {
         event.preventDefault;
 
         currentUserID = UserID;
-        currentEmailAddress = EmailAddress;
+        //currentEmailAddress = EmailAddress;
         currentTimeStamp = TimeStamp;
         currentWebRequestID = WebRequestID;
         currentMessage = Message;
         currentMethodName = MethodName;
-        currentObject = Object;
+        //currentObject = Object;
 
         exampleModal.open();
     };
@@ -208,12 +206,12 @@ else
         event.preventDefault;
 
         currentUserID = null;
-        currentEmailAddress = null;
+        //currentEmailAddress = null;
         currentTimeStamp = null;
         currentWebRequestID = null;
         currentMessage = null;
         currentMethodName = null;
-        currentObject = null;
+        //currentObject = null;
 
         exampleModal.close();
     };
@@ -240,12 +238,12 @@ else
         debugger;
         var model = {
             UserID: currentUserID,
-            EmailAddress: currentEmailAddress,
+            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             Message: currentMessage,
             MethodName: currentMethodName,
-            Object: currentObject,
+            //Object: currentObject,
         };
 
         $.ajax({
@@ -261,12 +259,12 @@ else
                 document.getElementById("usernameForm").reset();
 
                 currentUserID = null;
-                currentEmailAddress = null;
+                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentMessage = null;
                 currentMethodName = null;
-                currentObject = null;
+                //currentObject = null;
 
                 if (result.IsCreated) {
                     window.location.reload();
@@ -283,16 +281,15 @@ else
         });
     };
 
-    function markUnimportant(currentUserID, currentEmailAddress, currentTimeStamp, currentWebRequestID, currentMessage,
-        currentMethodName, currentObject) {
+    function markUnimportant(currentUserID, currentTimeStamp, currentWebRequestID, currentMessage, currentMethodName) {
         var model = {
             UserID: currentUserID,
-            EmailAddress: currentEmailAddress,
+            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             Message: currentMessage,
             MethodName: currentMethodName,
-            Source: currentObject,
+            //Source: currentObject,
         };
 
         $.ajax({
@@ -305,12 +302,12 @@ else
 
             success: function (result) {
                 currentUserID = null;
-                currentEmailAddress = null;
+                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentMessage = null;
                 currentMethodName = null;
-                currentObject = null;
+                //currentObject = null;
 
                 if (result.IsCreated) {
                     window.location.reload();
