--- a/InternshipSkeleton/Views/LogWebRequest/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/SearchIndex.cshtml
@@ -194,6 +194,7 @@ else
 
         $.ajax({
             method: "POST",
+            async: false,
             url: "@Url.Action("UpdateImportance", "LogWebRequest")",
             dataType: "json",
             data: {
