--- a/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
@@ -136,14 +136,12 @@
                         @if (currentRow.Important == null) //button to mark as important
                         {
                             <img src="~/Content/unfilledStar.png" class="unfilledIcon" onclick="openModal('@currentRow.UserID.ToString()',
-                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
-                            '@currentRow.WebRequestID.ToString()', '@currentRow.Status.ToString()')">
+                            '@currentRow.TimeStamp.ToString()','@currentRow.WebRequestID.ToString()', '@currentRow.Status.ToString()')">
                         }
                         else //button to unmark as important
                         {
                             <img src="~/Content/filledStar.png" class="filledIcon" onclick="markUnimportant('@currentRow.UserID.ToString()',
-                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
-                            '@currentRow.WebRequestID.ToString()', '@currentRow.Status.ToString()')">
+                            '@currentRow.TimeStamp.ToString()','@currentRow.WebRequestID.ToString()', '@currentRow.Status.ToString()')">
                         }
                     </td>
                 </tr>
@@ -171,7 +169,7 @@ else
     var exampleModalVisible = false;
 
     var currentUserID = null;
-    var currentEmailAddress = null;
+    //var currentEmailAddress = null;
     var currentTimeStamp = null;
     var currentWebRequestID = null;
     var currentStatus = null;
@@ -183,11 +181,11 @@ else
     var currentsearchBy = null;
     var currentsearchInput = null;
 
-    function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, Status, /*RedirectLocation */) {
+    function openModal(UserID, TimeStamp, WebRequestID, Status) {
         event.preventDefault;
 
         currentUserID = UserID;
-        currentEmailAddress = EmailAddress;
+        //currentEmailAddress = EmailAddress;
         currentTimeStamp = TimeStamp;
         currentWebRequestID = WebRequestID;
         currentStatus = Status;
@@ -200,7 +198,7 @@ else
         event.preventDefault;
 
         currentUserID = null;
-        currentEmailAddress = null;
+        //currentEmailAddress = null;
         currentTimeStamp = null;
         currentWebRequestID = null;
         currentStatus = null;
@@ -231,7 +229,7 @@ else
 
         var model = {
             UserID: currentUserID,
-            EmailAddress: currentEmailAddress,
+            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             Status: currentStatus,
@@ -239,6 +237,7 @@ else
 
         $.ajax({
             method: "POST",
+            async: false,
             url: "@Url.Action("UpdateImportance", "LogWebResponse")",
             dataType: "json",
             data: {
@@ -250,7 +249,7 @@ else
                 document.getElementById("usernameForm").reset();
 
                 currentUserID = null;
-                currentEmailAddress = null;
+                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentStatus = null;
@@ -270,10 +269,10 @@ else
         });
     };
 
-    function markUnimportant(currentUserID, currentEmailAddress, currentTimeStamp, currentWebRequestID, currentStatus) {
+    function markUnimportant(currentUserID, currentTimeStamp, currentWebRequestID, currentStatus) {
         var model = {
             UserID: currentUserID,
-            EmailAddress: currentEmailAddress,
+            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             Status: currentStatus,
@@ -289,7 +288,7 @@ else
 
             success: function (result) {
                 currentUserID = null;
-                currentEmailAddress = null;
+                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentStatus = null;
